[Patch/expand] Cost instruction sequences when doing left wide shift

Patch background details:

    https://gcc.gnu.org/ml/gcc-patches/2015-08/msg01147.html

gcc/
  PR rtl-optimization/67421
  * expr.c (expand_expr_real_2): Cost instrcution sequences when doing left wide
  shift tranformation.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@227629 138bc75d-0d04-0410-961f-82ee72b054a4